moved forward with article

--- a/_source/2020-08-13_most_popular_names.Rmd
+++ b/_source/2020-08-13_most_popular_names.Rmd
@@ -1,35 +1,51 @@
 # Most popular names in the US
 
-
-- Question can be answered from different perspectives
-  - All time most popular 
-  - Popular names in the last years 
-  - Most popular long names
-  - Most popular short names
-
-
-You know the situation you to talk strangers about it this and that. At some point they ask you how you make your living.
-This happened exactly to me last weekend, when I was on u party of a friend. I told the people at the buffet about my website. They were espcially
-interested in my babyname database, as they all had kids. Everyone had an anecdote to tell about their name search. Then a woman asked me what
-are actually the most popular names, obviously she wanted to test me. It was a bit embarrassing, because I didn't know the answer. I told her that it is "Emma" for girls and "David" for boys. Actually I wasn't sure at all if I was right. I told the people that it's not so easy to answer the question, as it depends on how you define "most popular".
+You know the situation when you to talk to strangers about this and that. At some point they ask you what you do for your living.
+This happened exactly to me last weekend, when I was on a friend's party. At the buffet I told the people about our site. They were especially
+interested in our babyname database, as they were all parents with kids. Everyone could tell an anecdote about their own name search, which was a lot of fun. Then a woman asked me what
+are actually the most popular names, obviously she wanted to test me. It was a bit embarrassing, as I couldn't the answer quickly. I told her that it is "Emma" for girls and "David" for boys. Actually I wasn't sure at all if I was right. I told the folks that it's not so easy to answer the question, as it depends on how you define "most popular".
 
 Last Monday I defined different criteria for "most popular" to analyse afterwards our database. In this article I want to show you the interesting results.
 
 ## The Alltime Most Popular Names Ranking
 
-In this analysis I evaluated all years since 1880. The analysis is a bit unfair for modern names as over a 100 years ago there were much less names around. 
-However the result is still interesting since you can call the names in this ranking "tradional" or "evergreen" names.
+In this analysis I evaluated all years since 1880. The analysis is a bit unfair for modern names as over a 100 years ago there were much less names around. So old names
+are more often used than modern one. However the result is still interesting since you can call the names in this ranking "traditonal" or "evergreen" names. 
+
+Many people like these kind of names, therefore this ranking makes sense.
+
+The are no many surprising names in the ranking. 
+The most popular girl's names are "Mary", "Elisabeth", "Patricia" and "Jennifer". For boys it's "James", "John", "Robert" and "Michael".
+
 
 ## The Most Popular Modern Names
 
-Many people tend to choose a modern name. For them "The Alltime Most Popular Names Ranking" does not provide so much so information. Therefore I created a list with
+Many people tend to choose a modern name. For them "The Alltime Most Popular Names Ranking" does not provide so much so information. Therefore I creating a ranking with
 the most popular names in the last 10 years. The results look different although you can still spot names, that are in the ranking from before.
+
+The most popular names female names are in this list "Emma", "Sophia", "Isabella" and "Olivia". It's interesting that "Elisabeth" still makes it the Top 10. The name is a still a modern name.
+
+The top male names over the last years are "Jacob", "Noah" "William" and "Ethan". Again there is a name that is still modern, although it's a very traditional one: "Michael"
 
 ## The Most Popular Short Modern Names
 
-People often tell me that they prefer short names. For these people is this ranking with modern short names. 
+People often tell me that they prefer short names. For these people is this ranking with modern short names. All name with less than 6 characters are included into this ranking.
+
+The top names are "Emma", "Ava", "Emily" and "Mia" for girls and "Jacob", "Noah", "Ethan" and "Mason" for boys.
+
+I was actually right on the party telling the folks that "Emma" is the most popular name for girls, but I was wrong with "David".  
 
 
 ## The Most Popular Long Modern Names
 
-But what's about longer names? I am sure there are people that dislike all these short names like "Zoe" or "Mia"
+But what's about longer names? I am sure there are people that dislike all these short names like "Zoe" or "Mia".
+
+I compiled a ranking with names with more than 8 characters.
+
+
+
+### Conclusion
+
+The definition of "The Most Popular Name" is dependent on the criteria you define which name makes into the ranking and which not. You are completly free with it, so compiling a ranking is a lot of fun, especially in case you find funny names. 
+
+What criteria would you like to get analysed, please let me know.
